# dashcam-video-merger

./: .gitignore  DEVELOPMENT_LOG.md  MCP_SETUP.md  README.md  dashcam_merger.py  demo_progress.py  pyproject.toml  requirements.txt
config/: config.json.example
docs/: ARCHITECTURE.md
scripts/: dashcam_merger.py
src/dashcam_merger/: __init__.py  __main__.py
src/dashcam_merger/cli/: __init__.py  main.py
src/dashcam_merger/core/: __init__.py  config.py  models.py
src/dashcam_merger/parsers/: __init__.py  file_parser.py
src/dashcam_merger/processors/: __init__.py  video_merger.py
src/dashcam_merger/ui/: __init__.py  progress.py
