[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashcam-video-merger"
version = "1.1.0"
authors = [
    {name = "H1R0Kazu", email = "45536882+H1R0Kazu@users.noreply.github.com"},
]
description = "ドライブレコーダーの細切れ動画を日付・カメラ別にマージするツール"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
keywords = ["dashcam", "video", "merger", "ffmpeg", "multimedia"]

[project.urls]
Homepage = "https://github.com/H1R0Kazu/dashcam-video-merger"
Documentation = "https://github.com/H1R0Kazu/dashcam-video-merger/blob/main/README.md"
Repository = "https://github.com/H1R0Kazu/dashcam-video-merger.git"
"Bug Tracker" = "https://github.com/H1R0Kazu/dashcam-video-merger/issues"

[project.scripts]
dashcam-merger = "dashcam_merger.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/dashcam_merger --cov-report=html --cov-report=term-missing"